Fix breadcrumb wrapping

--- a/src/styles/blog/_breadcrumb.scss
+++ b/src/styles/blog/_breadcrumb.scss
@@ -13,6 +13,7 @@
     list-style: none;
     font-size: var(--font-size-1);
     line-height: var(--line-height-1);
+    flex-wrap: wrap;
   }
 
   li {
